--- a/htmlproject/css/style.css
+++ b/htmlproject/css/style.css
@@ -34,3 +34,11 @@ ul li{list-style: none;}
 img{vertical-align: top;}
 
 h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
+
+.text {
+    max-width: 800px;
+    border: 10px dotted blueviolet ;
+}
+.photo{
+    
+}
