--- a/htmlproject/css/style.css
+++ b/htmlproject/css/style.css
@@ -40,5 +40,8 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
     border: 10px dotted blueviolet ;
 }
 .photo{
-    
+
+    background: url('../img/pic.png') 0 0/100% no-repeat fixed;
+    height: 403px;
+    width: 100%;
 }
