--- a/htmlproject/css/style.css
+++ b/htmlproject/css/style.css
@@ -34,3 +34,127 @@ ul li{list-style: none;}
 img{vertical-align: top;}
 
 h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
+
+body{
+    background: #E8E8E8 url("../img/background.png") 50% 130px no-repeat;
+}
+.content {
+    padding: 168px 0 137px 0;
+    max-width: 841px;
+    margin: 0px auto;
+}
+
+.content-top {
+    text-align: center;
+    margin: 0px 0px 70px 0px;
+}
+
+.content-top__category {
+    opacity: 0.6;
+    color:#273D46;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    font-size: 14px;
+    text-transform: uppercase;
+    letter-spacing: 2.8px;
+}
+
+.content-top__title {
+    color: #273D46;
+    font-size: 36px;
+    line-height: 50px;
+    max-width: 725px;
+    margin: 0px auto;
+}
+
+.content__image {
+    box-shadow: 0px 15px 65px 0px rgba(15, 16, 16, 0.15);
+    background-color: #fff;
+    padding: 10px;
+    margin: 0px 0px 85px 0px;
+}
+
+.content__image img {
+    max-width: 100%;
+}
+
+.content-bottom {
+    padding: 0px 45px;
+}
+
+.content-bottom__text {
+    opacity: 0.8;
+    font-size: 24px;
+    line-height: 40px;
+    color: #273d46;
+    margin: 0px 0px 48px 0px;
+}
+.content-bottom__text p{
+    margin: 0px 0px 40px 0px;
+}
+
+.content-bottom__text p:last-child{
+    margin: 0px;
+}
+
+.content-bottom-info {
+}
+
+.content-bottom-info-list {
+    margin-bottom: 59px;
+}
+
+.content-bottom-info-list li{
+    font-family: Arial, "Helvetica Neue", Helvetica,sans-serif;
+    font-size: 20px;
+    margin: 0px 0px 15px 0px;
+    background: url("../img/icons/check.png") left no-repeat;
+    padding: 0px 0px 0px 35px;
+}
+
+.content-bottom-info-list li:last-child{
+    margin: 0px;
+}
+
+.content-bottom-info-list li:nth-child(1){
+    text-shadow: 0px 1px 0px rgba(0,0,0,0.3);
+    color: #273d46;
+}
+
+.content-bottom-info-list li:nth-child(2){
+    font-style: italic;
+    color: #80b7b3;
+}
+
+.content-bottom-info-list li:nth-child(3){
+    font-weight: 700;
+    color: #273d46;
+}
+
+.content-bottom-info-list li:nth-child(4){
+    text-decoration: line-through;
+    color: #273d46;
+}
+
+.content-bottom-info-list li:nth-child(4) span{
+    opacity: 0.3;
+}
+
+.content-bottom-info__link {
+    display: inline-block;
+    line-height: 44px;
+    padding: 0px 30px;
+    background-color: #80b7b3;
+    border-radius: 24px;
+    height: 44px;
+    box-shadow: 0px 6px 40px 0px rgba(128,183,179,0.54);
+    font-family: Arial, "Helvetica Neue", Helvetica,sans-serif;
+    font-size: 14px;
+    text-transform: uppercase;
+    letter-spacing: 2.8px;
+    color: #ffffff;
+}
+
+.content-bottom-info__link span{
+    padding: 0px 30px 0px 0px;
+    background: url("../img/icons/arrow.svg") right no-repeat;
+}
