--- a/htmlproject/css/style.css
+++ b/htmlproject/css/style.css
@@ -35,13 +35,7 @@ img{vertical-align: top;}
 
 h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 
-.text {
-    max-width: 800px;
-    border: 10px dotted blueviolet ;
+body{
+    color: #fff;
 }
-.photo{
 
-    background: url('../img/pic.png') 0 0/100% no-repeat fixed;
-    height: 403px;
-    width: 100%;
-}
