--- a/htmlproject/css/style.css
+++ b/htmlproject/css/style.css
@@ -36,6 +36,62 @@ img{vertical-align: top;}
 h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 
 body{
-    color: #fff;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
-
+.container{
+    max-width: 1180px;
+    margin: 0 auto;
+}
+.wrapper {
+    min-height: 100%;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+}
+.content {
+    flex: 1 1 auto;
+}
+.hi {
+    background-color: #445162;
+    padding: 50px 0;
+}
+.hi__row {
+    display: flex;
+    justify-content: space-between;
+}
+.hi__body {
+    color: #fff;
+    padding-right: 30px;
+}
+.hi__titie {
+    text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.3);
+    font-size: 60px;
+    margin: 0px 0px 38px 0px;
+}
+.hi__list {}
+.hi__list li{
+    background: url('../img/icons/flex-icon.svg') 0 1px no-repeat;
+    text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.3);
+    font-style: 20px;
+    line-height: 22px;
+    padding-left: 36px;
+    margin-bottom: 15px;
+}
+.hi__list li:last-child{
+    margin: 0;
+}
+.hi_image {}
+.footer {
+    background-color: #F5F5F5;
+}
+.footer__row {
+    display: flex;
+    height: 65px;
+    justify-content: center;
+    align-items: center;
+}
+.footer_text {
+    color:#445162;
+    font-size: 12px;
+    letter-spacing: 0.3px;
+}
